@@ -102,6 +102,7 @@ Changes in FLTK 1.4.0					Released: ??? ?? 2019
   Other Improvements
 
   - (add new items here)
+  - Added support for macOS 10.15 "Catalina"
   - Improved documentation for '@' symbols in labels (STR #2940).
   - Fl_Roller can now be controlled via the mouse wheel (STR #3120).
   - Tooltips hide by themselves after 12 seconds (STR #2584).
